It does not matter how slowly you go as long as you do not stop. -- Confucius

Feb, Feb 9, 2008
---------------------------------------------------------------------
- Converted remaining forms to HAML and the stylesheet to SASS.

Sun, Feb 8, 2008
---------------------------------------------------------------------
- Added custom logger to highlight logged messages.
- Added [task_at_hint] field to [tasks] table to capture due date request.
- Refactored task model and crm.date_select_popup() in application.js.

Sat, Feb 7, 2008
---------------------------------------------------------------------
- Created initial implementation of adding a new task (all except specific date).
- Refactored tasks code to simplify filtering.
- Implemented flipping between dropdown and calendar popup.
- Updated task related controller and view specs.

Fri, Feb 6, 2008
---------------------------------------------------------------------
- Finished implementing after_filter callback hook in [web-to-lead] plugin.
- Implemented tasks deletion for all three views.
- More fun with SASS stylesheets -- pretty cool stuff.

Thu, Feb 5, 2008
---------------------------------------------------------------------
- More work researching application's after_filter and making it work right.

Wed, Feb 4, 2008
---------------------------------------------------------------------
- Added [app_after_filter] hook and moved the rest of [web-to-lead] code to plugin.
- Started converting CSS to SASS.

Tue, Feb 3, 2008
---------------------------------------------------------------------
- Added README.rdoc and sample database configuration files, updated sample users.
- Added :app_before_filter hook, extracted [web-to-lead] code and moved it to plugin.
- Tweaks to login and signup forms (to be converted to HAML soon).

Mon, Feb 2, 2008
---------------------------------------------------------------------
- Updated task related controller and view specs.