@@ -11,8 +11,12 @@
         %td= spacer
         %td{ :valign => :top }
           .label.top.req Due:
-          = f.select :due_at_hint, @due_at_hint, {}, { :style => "width:120px", :onchange => "flip_calendar(this.value)" }
-          = f.text_field :calendar, :style => "width:110px; display:none;", :autocomplete => :off
+          - if @task.due_at_hint != "specific_time"
+            = f.select :due_at_hint, @due_at_hint, {}, { :style => "width:120px;", :onchange => "flip_calendar(this.value)" }
+            = f.text_field :calendar, :style => "width:110px; display:none;", :autocomplete => :off
+          - else
+            = f.select :due_at_hint, @due_at_hint, {}, { :style => "width:120px; display:none;", :onchange => "flip_calendar(this.value)" }
+            = f.text_field :calendar, :style => "width:110px;", :autocomplete => :off
         %td= spacer
         %td{ :valign => :top }
           .label.top.req Assign to:
