@@ -1,6 +1,10 @@
 It does not matter how slowly you go as long as you do not stop. -- Confucius
 
-Feb, Feb 9, 2008
+Tue, Feb 10, 2008
+---------------------------------------------------------------------
+- Implemented creating and assigning tasks for the specific date from the calendar.
+
+Mon, Feb 9, 2008
 ---------------------------------------------------------------------
 - Converted remaining forms to HAML and the stylesheet to SASS.
 
